--- a/gregary/templates/gregary/coming_events.html
+++ b/gregary/templates/gregary/coming_events.html
@@ -19,5 +19,7 @@ Enrollment number: {{ event.enrollment_number }}</p>
 
 {% endif %}
 <a href='{% url 'gregary:register_event' %}'> Register again?</a>
+<br><br>
+<a href="'{% url 'gregary:index' %}" > Home </a>
 </body>
 </html>
