--- a/gregary/templates/gregary/register_event.html
+++ b/gregary/templates/gregary/register_event.html
@@ -9,15 +9,19 @@
 <script src="{% static '/gregary/js/jquery.min.js' %}"></script>
 <script src="{% static '/gregary/js/jquery.datetimepicker.full.js' %}"></script>
 <link rel="stylesheet" type="text/css" href="{% static '/gregary/css/jquery.datetimepicker.css' %}"/>
-
 <form action = "{% url 'gregary:event_create' %}" method="post">
     {% csrf_token %}
-    Select a sport:
-    <select name="sub_category" >
-        <option value="cricket">Cricket</option>
-        <option value="badminton">Badminton</option>
-        <option value="volleyball">Volleyball</option>
+    Select the category of the event :
+    <select id='category' name='category'>
+        <option value='food' >Food
+        <option value='computer_games'> Computer games
+        <option value="games">Games
+    </select><br>
+    <br>
+    Select the sub category:
+    <select id='sub_category' name='sub_category'>
     </select>
+    <script src="{% static '/gregary/js/subchanger.js' %}"></script>
     <br><br><br>
     Name :
     <input type="text" name="student" />
