--- a/gregary/templates/gregary/coming_events.html
+++ b/gregary/templates/gregary/coming_events.html
@@ -18,8 +18,8 @@ Enrollment number: {{ event.enrollment_number }}</p>
 <p> data not received </p>
 
 {% endif %}
-<a href='{% url 'gregary:register_event' %}'> Register again?</a>
+<a href='{% url 'gregary:register_event' %}'> Register </a>
 <br><br>
-<a href="'{% url 'gregary:index' %}" > Home </a>
+<a href="{% url 'gregary:index' %}" > Home </a>
 </body>
 </html>
