--- a/gregary/templates/gregary/index.html
+++ b/gregary/templates/gregary/index.html
@@ -9,6 +9,6 @@
 <a href='{% url 'gregary:register_event' %}'> Register Event</a>
 <br>
 <a href='{% url 'gregary:coming_events' %}' > Upcoming Events </a>
-
+<br><p><a href="{% url 'auth_model:logout' %}"> Logout </a>
 </body>
 </html>
