--- a/auth_model/templates/auth_model/login.html
+++ b/auth_model/templates/auth_model/login.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<title>Login form</title>
+	<title>Login</title>
+
 </head>
+
 <body>
+{% load staticfiles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'auth_model/css/fonts.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'auth_model/css/login_applet.css' %}">
 
-  <form action = "{% url 'auth_model:authenticate_method' %}" method="post">
-{% csrf_token %}
-
-<label for="username">Username :</label>
-<input type="text" name="username" /> <br><br><br>
-<label for="password">Password : </label>
-<input type="password" name="password" /> <br><br><br>
-<input type="submit" value="Login" /> <br><br><br>
-</form>
-<br><br><br>
-{% if error %}<p><strong>{{ error }}</strong></p>{% endif %}
+	<div class="NoPopUp" id="LoginNPU" >
+		<center>
+			<h2 id="LoginTitle">ACCOUNT LOGIN</h2>
+			<form action="{% url 'auth_model:authenticate_method' %}" method="post">
+				{% csrf_token %}
+				<div class="formContainer">
+						<label class="formElementLabel">USERNAME</label><br>
+						<input type="text" name="username" placeholder="Username" class="formElement" required>
+						<br>
+    				<!--<label class="formElementLabel">EMAIL</label><br>
+    				<input type="text" name="email" placeholder="E-mail ID" class="formElement" required>
+    				<br>-->
+    				<label class="formElementLabel">PASSWORD</label><br>
+    				<input type="password" name="password" placeholder= "Password" class="formElement"	required>
+    				<br>
+						<!--
+    				<label class="formElementLabel">PHONE NUMBER</label><br>
+    				<input type="text" name="phone_number" placeholder= "Phone Number" class="formElement"	required>
+    				<br>-->
+    				<button type="submit" name="submit" class="formButton" id="LoginButton" >LOGIN</button>
+    				<br>
+    				<span id="LoginLinks">
+    				<a class="loginLink" href="#">Forgot password?</a>
+    				<br>
+    				<a class="loginLink" href="{% url 'auth_model:sign_up'%}">Not a member? Sign Up!</a>
+    				<br>
+    				</span>
+  				</div>
+			</form>
+		</center></div>
+	<script type="text/javascript" src="{% static 'gregary/js/vendor/jquery-3.1.1.js' %}"></script>
+	<script type="text/javascript" src="{% static 'gregary/js/login_applet.js' %}"></script>
+  <br>
+  {% if error %}<p><strong>{{ error }}</strong></p>{% endif %}
 </body>
 </html>
