--- a/gregary/static/gregary/samples/titlebar.css
+++ b/gregary/static/gregary/samples/titlebar.css
@@ -1,9 +1,12 @@
 header {
     background-color: #111111;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
     height: 65px;
     width: 100%;
 /*    box-shadow: 0px 0px 10px black;
 */
+    position: fixed;
+    z-index: 100;
 }
 
 #main-title {
