--- a/gregary/static/gregary/samples/titlebar.css
+++ b/gregary/static/gregary/samples/titlebar.css
@@ -2,6 +2,7 @@ header {
     background-color: #111111;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
     height: 65px;
+    min-width: 1000px;
     width: 100%;
 /*    box-shadow: 0px 0px 10px black;
 */
@@ -28,7 +29,8 @@ header {
     height: 55px;
     float: right;
     padding: 5px 35px 5px 10px;
-    position: relative;
+    position: absolute;
+    right: 0px;
 }
 
 #login-button {
