Adds events page. Complete

--- a/gregary/static/gregary/samples/titlebar.css
+++ b/gregary/static/gregary/samples/titlebar.css
@@ -2,7 +2,7 @@ header {
     background-color: #111111;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
     height: 65px;
-    min-width: 1000px;
+    min-width: 100px;
     width: 100%;
 /*    box-shadow: 0px 0px 10px black;
 */
@@ -12,7 +12,7 @@ header {
 
 #main-title {
     font-family: 'Infinite Stroke Bolder';
-    color: #EEEEEE;
+    color: #FFF;
     background-image: url('titleback.png');
     background-size: cover;
     margin: 0;
