IMPROVED EVENTS PAGE

--- a/gregary/static/gregary/css/common.css
+++ b/gregary/static/gregary/css/common.css
@@ -1,8 +1,10 @@
+{% load staticfiles %}
+
 html * {
     font-family: 'Roboto Regular';
 }
 
-body {    
+body {
     margin: 0 !important;
     padding: 0 !important;
 }
@@ -28,7 +30,7 @@ a {
     border: none;
     cursor: pointer;
     box-shadow: 0 0 1px transparent;
-    
+
     /* Animations */
     -webkit-transform: perspective(1px) translateZ(0);
     transform: perspective(1px) translateZ(0);
@@ -53,60 +55,65 @@ a {
 
 @font-face {
     font-family: 'Infinite Stroke';
-    src: url('Infinite_Stroke.otf');
+    src: url('../fonts/Infinite_Stroke.otf');
 }
 
 @font-face {
     font-family: 'Infinite Stroke Bolder';
-    src: url('Infinite_Stroke_Bolder.otf');
+    src: url('../fonts/Infinite_Stroke_Bolder.otf');
 }
 
 @font-face {
     font-family: 'Thinking of Betty';
-    src: url('Thinking_of_Betty.ttf');
+    src: url('../fonts/Thinking_of_Betty.ttf');
 }
 
 @font-face {
     font-family: 'Barking Cat';
-    src: url('Barking_Cat.otf');
+    src: url('../fonts/Barking_Cat.otf');
 }
 
 @font-face {
     font-family: 'Stardust';
-    src: url('Stardust.ttf');
+    src: url('../fonts/Stardust.ttf');
 }
 
 @font-face {
     font-family: 'Raleway Light';
-    src: url('Raleway-Light.ttf');
+    src: url('../fonts/Raleway-Light.ttf');
 }
 
 @font-face {
     font-family: 'Raleway Regular';
-    src: url('Raleway-Regular.ttf');
+    src: url('../fonts/Raleway-Regular.ttf');
 }
 
 @font-face {
     font-family: 'Raleway Medium';
-    src: url('Raleway-Medium.ttf');
+    src: url('../fonts/Raleway-Medium.ttf');
 }
 
 @font-face {
     font-family: 'Roboto Bold';
-    src: url('Roboto-Bold.ttf');
+    src: url('../fonts/Roboto-Bold.ttf');
 }
 
 @font-face {
     font-family: 'Roboto Medium';
-    src: url('Roboto-Medium.ttf');
+    src: url('../fonts/Roboto-Medium.ttf');
 }
 
 @font-face {
     font-family: 'Roboto Regular';
-    src: url('Roboto-Regular.ttf');
+    src: url('../fonts/Roboto-Regular.ttf');
 }
 
 @font-face {
     font-family: 'Roboto Light';
-    src: url('Roboto-Light.ttf');
+    src: url('../fonts/Roboto-Light.ttf');
+}
+
+@font-face {
+    font-family: 'Roboto Thin';
+    src: url('../fonts/Roboto-Thin.ttf');
 }
