--- a/gregary/templates/gregary/register_event.html
+++ b/gregary/templates/gregary/register_event.html
@@ -20,9 +20,9 @@
     <div class="formContainer">
         <label class="formElementLabel">CATEGORY</label><br>
           <select id='category' name='category'  class="formElement" required>
-            <option value='food' >Food
-            <option value='computer_games'> Computer games
-            <option value="games">Games
+            <option value='split_a_meal' >Split-a-meal
+            <option value='video_games'>Video games
+            <option value="sports">Sports
         </select>
         <label class="formElementLabel">SUB-CATEGORY</label><br>
           <select id='sub_category' name='sub_category'  class="formElement" required>
