--- a/gregary/static/gregary/css/titlebar.css
+++ b/gregary/static/gregary/css/titlebar.css
@@ -48,6 +48,10 @@ header {
     float: left;
 }
 
+#profile-picture:hover {
+    cursor: pointer;
+}
+
 #uinfo-container {
     height: 55px;
     position: relative;
@@ -60,4 +64,16 @@ header {
     line-height: 16px;
     color: #EEEEEE;
     display: table-row;
+}
+
+#uinfo-card {
+    display: none;
+    border-radius: 2px;
+    box-shadow: 0px 0px 10px rgba(200,200,200,0.1);
+    padding: 10px 0px;
+    width: 150px;
+    top: 75px;
+    right: 20px;
+    background-color: #EEE;
+    position: fixed;
 }
