--- a/auth_model/static/auth_model/css/login_applet1.css
+++ b/auth_model/static/auth_model/css/login_applet1.css
@@ -22,16 +22,15 @@ span {
 .NoPopUp {
 	position:fixed;
     width: 340px;
-    height: 400px;
+    height: 390px;
     top:0;
     left: 0;
     right: 0;
     bottom: 0;
     margin: auto;
-    border-radius: 4px;
-    background-color: #87CEEB;
+    border-radius: 2px;
+    background-color: #FFA617;
     background-clip: border-box;
-    box-shadow: 2px 2px 10px #888888;
     overflow: hidden;
 }
 
@@ -56,7 +55,6 @@ span {
 	width: 240px;
 	height: 40px;
 	border-color: #444444;
-	box-shadow: 0px 1px 8px #AAAAAA;
 	padding-left: 10px;
 	font-size: 16px;
 	font-family: 'Raleway-Regular';
@@ -75,6 +73,10 @@ span {
 	padding-top: 0px;
 	font-size: 15px;
 	font-family: 'Raleway-Regular';
+}
+
+.loginLink p{
+    color: black;
 }
 
 #LoginNPU {
@@ -114,9 +116,16 @@ span {
 }
 
 #LoginLinks {
-	padding-top: 10px;
+    padding-top: 5px;
 	padding-bottom: 10px;
 	position: relative;
 	background-color: rgba(255,255,255,0.25);
 	background-clip: border-box;
+}
+
+
+#title {
+    color: white;
+    font-size: 100px;
+    font-family: 'Infinite Stroke Bolder';
 }
