--- a/gregary/static/gregary/css/common.css
+++ b/gregary/static/gregary/css/common.css
@@ -26,7 +26,7 @@ a {
     color: #EEEEEE;
     font-family: 'Roboto Medium';
     padding: 10px 10px;
-    border-radius: 1px;
+    border-radius: 2x;
     border: none;
     cursor: pointer;
     box-shadow: 0 0 1px transparent;
@@ -34,14 +34,14 @@ a {
     /* Animations */
     -webkit-transform: perspective(1px) translateZ(0);
     transform: perspective(1px) translateZ(0);
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
+    -webkit-transition-duration: 0.15s;
+    transition-duration: 0.15s;
     -webkit-transition-property: color, background-color;
     transition-property: color, background-color;
 }
 
 .custom-button:hover {
-    background-color: #EEEEEE;
+    background-color: #FFF;
     color: black;
 }
 
