--- a/gregary/static/gregary/css/login_applet.css
+++ b/gregary/static/gregary/css/login_applet.css
@@ -29,9 +29,9 @@ span {
     bottom: 0;
     margin: auto;
     border-radius: 4px;
-    background-color: #87CEEB;
+    background-color: #FFA617;
     background-clip: border-box;
-    box-shadow: 2px 2px 10px #888888;
+    box-shadow: 2px 2px 10px #FFA617;
     overflow: hidden;
 }
 
@@ -56,7 +56,6 @@ span {
 	width: 240px;
 	height: 29px;
 	border-color: #444444;
-	box-shadow: 0px 1px 8px #AAAAAA;
 	padding-left: 10px;
 	font-size: 16px;
 	font-family: 'Raleway-Regular';
@@ -120,4 +119,9 @@ span {
 	position: relative;
 	background-color: rgba(255,255,255,0.25);
 	background-clip: border-box;
+}
+
+#title {
+    color: white;
+    font-size: 1000px;
 }
