--- a/gregary/templates/gregary/homepage.html
+++ b/gregary/templates/gregary/homepage.html
@@ -9,8 +9,16 @@
     <body>
         <header>
             <!-- Title Bar -->
-            <h1 id="main-title">Gregary</h1>
-            <div id="uinfo-outer-container"></div>
+            <a href="{% url 'gregary:index' %}" ><h1 id="main-title">Gregary</h1></a>
+            <div id="uinfo-outer-container">
+                <div id="uinfo-card">
+                    <center>
+                        <a href="{% url 'auth_model:logout' %}">
+                            <button class="custom-button">LOGOUT</button>
+                        </a>
+                    </center>
+                </div>
+            </div>
         </header>
 
         <!-- Main Content -->
@@ -21,14 +29,24 @@
         <script type="text/javascript" src="{% static '/gregary/js/jquery-3.1.1.js' %}"></script>
         <script type="text/javascript" src="{% static '/gregary/js/homepage.js' %}"></script>
         <script type="text/javascript" src="{% static '/gregary/js/titlebar.js' %}"></script>
-<script>
-document.onload += (function() {
-if ('{{ user.username }}'==''){
-  drawLoginButton();
-}
-else {
-  drawUserInfo('{{user.username.upper}}');
-}
+        <script>
+        
+            // Handles User-Information
+            document.onload += (function() {
+                if ('{{ user.username }}'=='')
+                  drawLoginButton();
+                else 
+                  drawUserInfo('{{user.username.upper}}');
+                }());
+
+            // Handles login button linking
+            if ($("#login-button").length) {
+                $("#login-button").on('click', function() {
+                    window.location.href = "{% url 'gregary:index' %}";
+                });
+            }
+        </script>
+        
 }());
 </script>
     </body>
